fixed passing expressions as arguments
previously, expressions that were arguments to functions defined in Scheme did not render correctly. Also assigning a variable to an expression did not render correctly. Added tests.

--- a/www/index.html
+++ b/www/index.html
@@ -3,12 +3,10 @@
 <head>
 <script src="./schript.js"></script>
 <link rel=stylesheet href="translate.css" type="text/css">
-
-
 </head>
 
 
-<body>
+<body onload="initialize();">
 <div>
 <textarea id='scheme-input'></textarea>
 <input type='submit' value='translate' id='translate-button'>
